--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
             "inlineStyleLanguage": "scss",
             "preserveSymlinks": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/scss/styles.scss"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/scss/styles.scss"
+            ],
             "scripts": [],
             "allowedCommonJsDependencies": ["chart.js"]
           },
@@ -88,7 +91,10 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/scss/styles.scss"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/scss/styles.scss"
+            ],
             "scripts": []
           }
         }
