--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-scrollbar": "^12.0.0",
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
